--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_1_4_replikationsArbitrage.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_1_4_replikationsArbitrage.tex
@@ -34,7 +34,7 @@ Wir verwenden:
 			\hline \multirow{2}{*}{Portfolio} & \multirow{2}{*}{Wert in $t$} & \multicolumn{2}{c|}{Wert in $T$} \\
 			&& $S_T \le K$ & $S_T > K$ \\ \hline \hline
 			Kaufe Call & $C_t$ & $0$ & $S_T - K$ \\
-			Verkaufe Basisgut & $-S_T$ & $-S_T$ & $-S_T$ \\
+			Verkaufe Basisgut & $-S_t$ & $-S_T$ & $-S_T$ \\
 			Kaufe Anleihe & $\epsilon + K B(t,T)$ & $\frac{\epsilon}{B(t,T)} + K$ &  $\frac{\epsilon}{B(t,T)} + K$ \\ \hline
 			$\Sigma$ & $0$ & $K - S_T + \frac{\epsilon}{B(t,T)} > 0$ & $\frac{\epsilon}{B(t,T)} > 0$ \\
 			& kein Anfangskapital & \multicolumn{2}{c|}{sicherer Gewinn}\\ \hline
