--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_2_1_anlagestrategien.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_2_1_anlagestrategien.tex
@@ -74,10 +74,7 @@ d.h.
 		\begin{equation*}
 		\schlange{\Pi}_n = w + \sum_{k=1}^n \xi_k (\schlange{S}_k - \schlange{S}_{k-1}) = w + (\xi \bullet \schlange{S})_n
 		\end{equation*}
-		\item Der Anteil $\eta_n$ ist eindeutig gegeben durch
-		\begin{equation*}
-		\eta_n = \schlange{\Pi}_n - \xi_n \schlange{S}_n
-		\end{equation*}
+		\item Der Anteil $\eta_n$ ist eindeutig gegeben durch $\eta_n = \schlange{\Pi}_n - \xi_n \schlange{S}_n$.
 	\end{enumerate}
 \end{lemma}
 \begin{proof}
