--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_5_1_value-at-risk.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_5_1_value-at-risk.tex
@@ -13,14 +13,19 @@
 	\item Typische Werte für $\alpha$ sind beispielsweise $0.95$ oder $0.99$.
 \end{itemize}
 
-Skizze: Dichte von $L$, Verteilung von $L$
-
 Die Quantilfunktion
 \begin{equation*}
 	q_\alpha(L) = \inf \menge{\ell \in \R: F_L(\ell) \ge \alpha}
 	\tag{$\star$} \label{eq: quantil-star}
 \end{equation*}
 wird auch als verallgemeinerte Inverse von $F_L$ bezeichnet.
+
+\textbf{Skizze:} Dichte von $L$, Verteilung von $L$
+\begin{center}
+	%TODO BILD
+	\includegraphics[width=.5\textwidth]{example-image}
+	\captionof{figure}{Value-at-Risk}
+\end{center}
 
 \begin{lemma}
 	\begin{enumerate}[label=(\alph*)]
