--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_5_2_expectedShortfall.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_5_2_expectedShortfall.tex
@@ -6,13 +6,16 @@
 	\end{equation*}
 \end{*definition}
 
-\begin{*bemerkung_inline}
+\begin{*bemerkung}
 	Der Expected Shortfall wird auch \enquote{Average Value-at-Risk} oder \enquote{Conditional Value-at-Risk} genannt.
-\end{*bemerkung_inline}
+\end{*bemerkung}
 
-\textbf{Skizze:} %TODO
-
-\pagebreak
+\textbf{Skizze:}
+\begin{center}
+	%TODO BILD
+	\includegraphics[width=.5\textwidth]{example-image}
+	\captionof{figure}{Expected Shortfall}
+\end{center}
 
 \begin{theorem}
 	Sei $\EW[L^+] < \infty$.
