--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_2_2_replikationCRR.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_2_2_replikationCRR.tex
@@ -32,7 +32,7 @@ Gesucht ist nun eine replizierende Strategie $\folge{\xi_n}{n \in \N}$ und eine 
 				f_n(S_1, \dots, S_n) &= \frac{1}{1+r} \brackets{\frac{r-a}{b-r} f_{n+1}^b + \frac{b-r}{b-a} f_{n+1}^a} \tag{Rek} \label{eq: 2_2_rek}
 			\intertext{wobei}
 				f_{n+1}^b &= f_{n+1}(S_1, \dots, S_n, S_n (1+b)) \\
-				f_{n+1}^a &= f_{n+1}(S_1, \dots, S_n, S_n (1+a))  \qquad n \in [N]_0
+				f_{n+1}^a &= f_{n+1}(S_1, \dots, S_n, S_n (1+a))  \qquad (n \in [N]_0)
 		\end{align*}		
 		\item Die replizierende Strategie ist gegeben durch 
 		\begin{equation*}
@@ -72,7 +72,7 @@ Gesucht ist nun eine replizierende Strategie $\folge{\xi_n}{n \in \N}$ und eine 
 
 \begin{proof}[\cref{satz: 2.2.3}]
 	Mittels Rückwärtsinduktion über $n \in [N]_0$.
-	\begin{induction}
+	\begin{description}
 		\ianfang Für $n = N$ gilt $\Pi_N = C = h(S_1, \dots, S_N)$ nach \eqref{eq: 2_2_rep}, also $\Pi_N = f_N(S_1, \dots, S_N)$ mit $f_N = h$.
 		\ischritt Aus \eqref{eq: sf-schlange} folgt
 		\begin{equation*}
@@ -100,10 +100,10 @@ Gesucht ist nun eine replizierende Strategie $\folge{\xi_n}{n \in \N}$ und eine 
 		f_{n+1}^b - (1+r) \Pi_n = \frac{b-r}{b-a} \brackets{f_{n+1}^b - f_{n+1}^a} \follows \Pi_n = \frac{1}{1+r} \brackets{\frac{r-a}{b-a} f_{n+1}^b + \frac{b-r}{b-a} f_{n+1}^a}
 	\end{equation*}
 	Dies ist die Rekursionsgleichung \eqref{eq: 2_2_rek}.
-	\end{induction}
+	\end{description}
 \end{proof}
 
-\begin{*bemerkung_inline}
+\begin{*bemerkung}
 	Das Lineare Gleichungssystem [I, II] können wir schreiben als
 	\begin{equation*}
 		\begin{pmatrix}
@@ -121,7 +121,7 @@ Gesucht ist nun eine replizierende Strategie $\folge{\xi_n}{n \in \N}$ und eine 
 		\tag{LGS-1} \label{eq: 2_2_lgs-1}
 	\end{equation*}
 	Wir können auch ein Trinomialmodell (up, down, gleichbleibender Preis) betrachten. Dabei bekommen wir eine zusätzliche Zeile in obiger Matrix, jedoch ist das Gleichungssystem dann überbestimmt und i.A. nicht mehr eindeutig auflösbar.
-\end{*bemerkung_inline}
+\end{*bemerkung}
 
 \begin{*beispiel}[Asiatische Call-Option]
 	Die Auszahlung ist gegeben durch $(\quer{S}_N - K)_+$ mit $\quer{S}_N = \frac{1}{1+N} \sum_{k=0}^{N} S_k$. Somit handelt es sich um ein pfadabhängiges Derivat (Summe hängt von allen $S_k$ ab). 
@@ -144,7 +144,7 @@ Gesucht ist nun eine replizierende Strategie $\folge{\xi_n}{n \in \N}$ und eine 
 	\begin{equation*}
 		q = \frac{r-a}{b-a} = \frac{0.4}{0.6} = \frac{2}{3} \follows 1 - q = \frac{1}{3}
 	\end{equation*}
-	Rekursion:
+	\textbf{Rekursion}
 	\begin{align*}
 		f_1(130) &= \frac{1}{1+r} \brackets{q * f^b + (1-q) f^a} \\
 		&= \frac{1}{1,1} \brackets{\frac{2}{3} * 33 + \frac{1}{3} * 7} \\
@@ -153,7 +153,7 @@ Gesucht ist nun eine replizierende Strategie $\folge{\xi_n}{n \in \N}$ und eine 
 		f_1(70) &= \frac{1}{1.1} \brackets{\frac{2}{3} * 0 + \frac{1}{3} * 0} = 0 \\
 		f_0 &= \frac{1}{1.1} \brackets{\frac{2}{3} * \frac{1}{1.1} * \frac{73}{3} + \frac{1}{3} * 0} = \frac{1}{(1.1)^2} \frac{146}{9} \approx 13.41 
 	\end{align*}
-	Strategie
+	\textbf{Strategie}
 	\begin{align*}
 		\xi_2(130) &= \frac{f_2^b - f_2^a}{S_1 (b-a)} = \frac{33 - 7}{130 * 0.6} = \frac{26}{13*6} = \frac{1}{3} \\
 		\xi_2(70) &= \frac{0-0}{70 * 0.6} = 0 \\
