--- a/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_3_0_einfuehrung.tex
+++ b/Math-Ba-STOCHV/STOCHV_Vorlesung/stochv_3_0_einfuehrung.tex
@@ -45,17 +45,18 @@ Summe von unabhängigen, identisch verteilten Zufallsvariablen $\follows$ Zentra
 
 Es liegt ein sogenanntes Dreiecksschema vor:
 \begin{align*}
-Z_1 = L_1^1 \\
-Z_2 = L_1^2 + L_2^2 \\
-Z_3 = L_1^3 + L_2^3 + L_3^3 \\
-\vdots
+	Z_1 &= L_1^1 \\
+	Z_2 &= L_1^2 + L_2^2 \\
+	Z_3 &= L_1^3 + L_2^3 + L_3^3 \\
+	\vdots&
 \end{align*}
 Die Zufallsvariablen in einer Zeile sind unabhängige Zufallsvariablen.
 
 \begin{theorem}[CLT für Dreiecksschemata] %3.1
-	\label{theorem: 3.1}
-	Sei für jedes $N \in \N$ ein Vektor $L^N \defeq (L_1^N, L_2^N, \dots, L_N^N)$ von Zufallsvariablen gegeben (''Dreiecksschema``) mit folgenden Eigenschaften:
-	\begin{enumerate}[label = (\alph*), nolistsep]
+	\label{theorem: 3.1} 
+	Für jedes $N \in \N$ sei ein Vektor \newline
+	$L^N \defeq (L_1^N, L_2^N, \dots, L_N^N)$ von Zufallsvariablen gegeben (''Dreiecksschema``) mit folgenden Eigenschaften:
+	\begin{enumerate}[label = (\alph*)]
 		\item für alle $N \in \N$ sind die $(L_1^N, L_2^N, \dots, L_N^N)$ unabhängig mit identischer Verteilung
 		\item es existiert eine Folge von (deterministischen) Konstanten $c_N \to 0$, sodass $\abs{L_k^N} \le c_N$ für alle $k \in [N]$.
 		\item Mit $Z_N \defeq L_1^N + \dots L_N^N$ gilt $\EW[Z_N] \to m \in \R$ sowie $\Var[Z_N] \to s^2 > 0$ jeweils für $N \to \infty$.
@@ -66,7 +67,7 @@ Die Zufallsvariablen in einer Zeile sind unabhängige Zufallsvariablen.
 	siehe z.B. ''Wahrscheinlichkeitstheorie mit Martingalen``
 \end{proof}
 
-\begin{*bemerkung_inline}
+\begin{*bemerkung}
 	Die Dichte der Standardnormalverteilung ist gegeben durch
 	\begin{equation*}
 	\phi(x) \defeq \frac{1}{\sqrt{2 \pi}} e^{-\frac{x^2}{2}}
@@ -76,7 +77,7 @@ Die Zufallsvariablen in einer Zeile sind unabhängige Zufallsvariablen.
 	\Phi(x) \defeq \int_{-\infty}^x \phi(y) \diffskip{y} = \frac{1}{\sqrt{2 \pi}} \int_{-\infty}^x e^{-\frac{y^2}{2}} \diffskip{y}
 	\end{equation*}
 	Eine Normalverteilung mit Erwartungswert $m$ und Varianz $s^2$ hat Verteilungsfunktion $\Phi\brackets{\frac{x-m}{s}}$.
-\end{*bemerkung_inline}
+\end{*bemerkung}
 
 \begin{*definition}
 	Eine strikt positive Zufallsvariable $X$ heißt \begriff{lognormalverteilt} mit Parametern $m$ und $s^2$, wenn gilt $\log(X) \sim \Normal(m,s^2)$.
@@ -291,18 +292,18 @@ Analog lassen sich die Sensitivitäten (\enquote{Greeks}) nach den weiteren Para
 \begin{*definition}
 	Die Greeks des BS-Preises sind folgende partielle Ableitungen:
 	
-	\tiny
-	\begin{tabular}{|l|c|c|c|l|}
-		\hline
-		Bezeichnung & Def. & Wert Call & Wert Put & Bemerkungen \\
-		\hline \hline
-		Delta & $\partdiff{S}$ & $\Phi(d_1)$ & $-\Phi(-d_1)$ & bestimmt die Replikations- bzw. Hedgingstrategie \\ \hline
-		Gamma & $\frac{\partial^2}{\partial S^2}$ & \multicolumn{2}{c|}{$\frac{\phi(d_1)}{S_t \sigma \sqrt{T - t}}$} & \parbox{5.5cm}{Sensitivität von Delta gegenüber Basisgut, \enquote{wie oft} muss Replikatonsstrategie angepasst werden, Konvexität} \\ \hline
-		Vega & $\partdiff{\sigma}$ & \multicolumn{2}{c|}{$S_t \sqrt{T -t} \phi(d_1)$} & Sensitivität gegenüber Änderungen der Volatilität \\ \hline
-		Theta & $\partdiff{t}$ & \multicolumn{2}{c|}{siehe Übung} & Änderung in der Zeit \\ \hline
-		Rho & $\partdiff{r}$ & $K (T - t)e^{-r(T-t)} \Phi(d_2)$ & $- K (T - t)e^{-r(T-t)} \Phi(-d_2)$ & Sensitivität gegenüber Änderungen der Zinsrate \\ \hline	
-	\end{tabular}
-	\normalsize
+	\resizebox{\columnwidth}{!}{
+		\begin{tabular}{|l|c|c|c|l|}
+			\hline
+			Bezeichnung & Def. & Wert Call & Wert Put & Bemerkungen \\
+			\hline \hline
+			Delta & $\partdiff{S}$ & $\Phi(d_1)$ & $-\Phi(-d_1)$ & bestimmt die Replikations- bzw. Hedgingstrategie \\ \hline
+			Gamma & $\frac{\partial^2}{\partial S^2}$ & \multicolumn{2}{c|}{$\frac{\phi(d_1)}{S_t \sigma \sqrt{T - t}}$} & \parbox{5.5cm}{Sensitivität von Delta gegenüber Basisgut, \enquote{wie oft} muss Replikatonsstrategie angepasst werden, Konvexität} \\ \hline
+			Vega & $\partdiff{\sigma}$ & \multicolumn{2}{c|}{$S_t \sqrt{T -t} \phi(d_1)$} & Sensitivität gegenüber Änderungen der Volatilität \\ \hline
+			Theta & $\partdiff{t}$ & \multicolumn{2}{c|}{siehe Übung} & Änderung in der Zeit \\ \hline
+			Rho & $\partdiff{r}$ & $K (T - t)e^{-r(T-t)} \Phi(d_2)$ & $- K (T - t)e^{-r(T-t)} \Phi(-d_2)$ & Sensitivität gegenüber Änderungen der Zinsrate \\ \hline	
+		\end{tabular}
+	}
 \end{*definition}
 
 
@@ -319,9 +320,9 @@ Analog lassen sich die Sensitivitäten (\enquote{Greeks}) nach den weiteren Para
 	siehe Übung
 \end{proof}
 
-\begin{*bemerkung_inline}
+\begin{*bemerkung}
 	In Erweiterungen des Black-Scholes-Modells gibt es keine geschlossenen Ausdrücke für Put- bzw. Call-Preise, aber eine partielle Differentialgleichung ähnlich zur \eqref{eq: bs-pde} gilt weiterhin.
-\end{*bemerkung_inline}
+\end{*bemerkung}
 
 \section{Implizite Volatilität \& Grenzen des BS-Modells}
 
@@ -339,7 +340,7 @@ um die Abhängigkeit von $T$, $K$ und $\sigma$ zu verdeutlichen.
  	gilt.
 \end{theorem}
 
-\begin{*bemerkung_inline}
+\begin{*bemerkung}
 	$\sigma_\ast(T,K)$ ist Lösung eines inversen Problems:
 	\begin{itemize}[nolistsep, topsep=-\parskip]
 		\item Vorwärtsproblem: Parameter $\to$ Call-Preis
@@ -350,7 +351,7 @@ um die Abhängigkeit von $T$, $K$ und $\sigma$ zu verdeutlichen.
 		\item BS-Modell passt gut zu Daten: $(T,K) \mapsto \sigma_\ast(T,K)$ ist annähernd konstant
 		\item BS-Modell passt nicht gut zu Daten: $(T,K) \mapsto \sigma_\ast(T,K)$ variiert stark mit $(T,K)$
 	\end{itemize}
-\end{*bemerkung_inline}
+\end{*bemerkung}
 
 \textbf{Typische tatsächliche Beobachtung }
 % TODO BILD
