--- a/mathoperatorsMathTUD.sty
+++ b/mathoperatorsMathTUD.sty
@@ -247,7 +247,7 @@
 \newcommand{\disteq}{\mathrel{\overset{\mathrm{d}}{=}}}
 \newcommand{\distto}{\mathrel{\overset{\mathrm{d}}{\longrightarrow}}}
 \newcommand{\probto}{\mathrel{\overset{\mathbb{P}}{\longrightarrow}}}
-
+\newcommand{\weakto}{\mathrel{\overset{\text{w}}{\longrightarrow}}}
 % >> functional analysis
 \newcommand{\schwachstern}{ schwach${}^\ast$ }
 \newcommand{\weakconv}{\rightharpoonup}
