--- a/texmf/tex/latex/mathoperatorsMathTUD.sty
+++ b/texmf/tex/latex/mathoperatorsMathTUD.sty
@@ -160,6 +160,8 @@
 \newcommand{\Lint}{\mathcal{L}}
 
 % >> topology
+\newcommand{\inner}[1]{#1^\circ}
+\newcommand{\abschluss}[1]{\quer{#1}}
 \newcommand{\rand}{\partial}
 
 % >> measure theory
