--- a/Math-Ma-MSTAT/mstat_vorlesung_main.tex
+++ b/Math-Ma-MSTAT/mstat_vorlesung_main.tex
@@ -246,7 +246,7 @@
 \theorempreskip{\skiparound}
 \theorempostskip{\skiparound}
 
-\theoremstyle{nonumberplain}
+\theoremstyle{plain}
 \theoremseparator{}
 \theoremheaderfont{\osfamily \bfseries \upshape}
 \theorembodyfont{}
@@ -492,8 +492,11 @@
 	\label{chapter_3_zufallsvariablenInMetrischenRaeumen}
 	\input{mstat_3_1_zufallsvariablenInMetrischenRaeumen}
 	\input{mstat_3_2_fastsichereKonvergenz}
+	\input{mstat_3_3_stochastischeKonvergenz}
+	\input{mstat_3_4_konvergenzInProduktraeumen}
+	\input{mstat_3_5_gleichheitInVerteilung}
 	
-    \vfill \hfill $\square$
+    \vfill \hfill $\blacksquare$
     
     \nocite{*} % erstellt Literaturverzeichnus ohne Verweise
    	\bibliographystyle{abbrvdin}
