--- a/Math-Ma-MSTAT/mstat_3_2_fastsichereKonvergenz.tex
+++ b/Math-Ma-MSTAT/mstat_3_2_fastsichereKonvergenz.tex
@@ -66,85 +66,74 @@ Die bekannten Regeln (Ergebnisse) für \textit{reelle} Zufallsvariablen lassen s
 		\follows \P\brackets{\bigcap_{i \in \N} E_i}=1
 		\qquad \forall \menge{E_i} \subseteq \Omega \mit \P(E_i)=1
 	\end{equation*}
-	folgt $1 = \P\brackets{\menge{X_n \ntoinf X \text{ und $f$ stetig in } X}} \le\P\brackets{\menge{f(X_n) \ntoinf  f(X)}} \le 1$ und somit schon $\P\brackets{\menge{f(X_n) \ntoinf  f(X)}} = 1$.
+	folgt 
+	\begin{equation*}
+		1 = \P\brackets{\menge{X_n \ntoinf X \text{ und $f$ stetig in } X}} \le\P\brackets{\menge{f(X_n) \ntoinf  f(X)}} \le 1
+	\end{equation*}
+	und somit schon $\P\brackets{\menge{f(X_n) \ntoinf  f(X)}} = 1$.
 \end{proof}
 
-%\begin{satz}[Konvergenz-Kriterium]\label{Satz3.9}
-%	\begin{align*}
-%		X_n
-%		\ntoinf
-%		% CHECKED: '\longrightarrow' used.
-%		X\quad\P\text{-fast sicher}
-%		\Leftrightarrow
-%		\forall\epsilon>0:\limn\P\brackets{\sup_{m\ge n} d(X_m,X)>\epsilon}=0
-%	\end{align*}
-%\end{satz}
-%\begin{proof}
-%	Man ersetze im Beweis für den Fall reeller Zufallsvariablen $\abs{X_n-X}$ durch $d(X_n,X)$.
-%	Und beachte, dass alle Schlussfolgerungen bestehen bleiben. Hier ausführlich:
-%	\begin{align*}
-%		X_n \overset{n\to \infty}{\longrightarrow} X~\P \text{-fast sicher}
-%		&\Leftrightarrow 1 = \P\brackets{\bigcup_{0 < \epsilon} \bigcap_{m  \in  \N} \bigcup_{n \ge m} d(X_n, X) < \epsilon} \\
-%		&\Leftrightarrow 0 = \P\brackets{\bigcap_{0 < \epsilon} \bigcup_{m  \in  \N} \bigcap_{n \ge m} d(X_n, X) \ge \epsilon} \\
-%		&\Leftrightarrow \forall \epsilon > 0: 0 = \P\brackets{\bigcup_{m  \in  \N} \bigcap_{n \ge m} d(X_n, X) \ge \epsilon}
-%	\end{align*}
-%	Da für $m \to  \infty$ die Mengen $\menge{\bigcap_{n \ge m} d(X_n, X) \ge \epsilon}$ kleiner werden,
-%	ist dies äquivalent zu
-%	\begin{align*}
-%		\forall \epsilon > 0\, \forall δ > 0 \,∃m  \in  \N: \P\brackets{\bigcap_{n \ge m} d(X_n, X) \ge \epsilon} &< δ \\
-%		\Leftrightarrow \forall \epsilon > 0: \lim_{m \to  \infty} \P\brackets{\bigcap_{n \ge m} d(X_n, X) \ge \epsilon} &= 0 \\
-%		\Leftrightarrow \forall \epsilon > 0: \lim_{m \to  \infty} \P\brackets{\sup_{n \ge m} d(X_n, X) \ge \epsilon} &= 0
-%		\qedhere
-%	\end{align*}
-%\end{proof}
-%Ein sehr nützliches Kriterium ist Folgendes:
-%\begin{satz}\label{Satz3.10}
-%	\begin{align*}
-%		\sum_{n \in \N_{\ge1}}\P\brackets{d(X_n,X)>\epsilon} < \infty \qquad \forall \epsilon>0
-%		\Rightarrow  X_n
-%		\ntoinf
-%		% CHECKED: '\longrightarrow' used.
-%		X\quad\P\text{-fast sicher}
-%	\end{align*}
-%	\begin{bemerkung}
-%		% noNumber
-%		Die $\P(d(X_n, X) > \epsilon)$ werden in der Statistik \define{Fehlerwahrscheinlichkeit}
-%		oder \define{tail probability} genannt.
-%		Um Fehlerwahrscheinlichkeiten abzuschätzen, also die Voraussetzung für diesen Satz für einen speziellen Fall zu zeigen, nutzt man häufig sogenannte Maximalungleichungen wie die Markov-Ungleichung und die Tschebychew-Ungleichung.
-%	\end{bemerkung}
-%\end{satz}
-%
-%\begin{proof}
-%	Setze
-%	\begin{align*}
-%		A_n(\epsilon):=\menge{d(X_n,X)>\epsilon}\overset{\ref{Satz3.5}}{ \in }\A
-%	\end{align*}
-%	Dann folgt aus dem \undefine{ersten Borel-Cantelli-Lemma}:
-%	\begin{align*}
-%		&\P\brackets{\limsup_{n\to\infty} A_n(\epsilon)}=0\qquad\forall\epsilon>0
-%	\end{align*}
-%		Mit
-%	\begin{align*}
-%		\liminf_{n\to\infty}\brackets{A_n(\epsilon)^C}
-%		\overset{\text{Def}}=
-%		\bigcup_{m \in \N}\bigcap_{n\ge m}\brackets{A_n(\epsilon)}^C
-%		&= \brackets{\bigcap_{m \in \N}\bigcup_{n\ge m}\menge{ d(X_n,X)>\epsilon}}^C \\
-%		&\overset{\Def}= \brackets{\limsup_{n \to  \infty} A_n(\epsilon)}^C
-%	\end{align*}
-%	folgt dann
-%	\begin{align*}
-%		1=\P\brackets{\brackets{\limsup_{n\to\infty} A_n(\epsilon)}^C}
-%		=\P\brackets{\liminf_{n\to\infty}\brackets{A_n(\epsilon)^C}}\qquad\forall\epsilon>0
-%	\end{align*}
-%	Da abzählbare Durchschnitte von Eins-Mengen (also Mengen mit $\P$-Maß 1) wieder Eins-Mengen sind, folgt schließlich:
-%	\begin{align*}
-%		\P\brackets[\Bigg]{\underbrace{
-%			\bigcap_{0<\epsilon \in \Q}\bigcup_{m \in \N}\bigcap_{n\ge m}\menge{d(X_n,X)\le\epsilon}
-%		}_{\menge{ X_n\to X}=\menge{ d(X_n,X)\to0}}}=1
-%		&
-%		\qedhere
-%	\end{align*}
-%\end{proof}
-%
-%Weitere Eigenschaften der fast sicheren Konvergenz von Zufallsvariablen in metrischen Räumen finden sich z.\,B.\ in \cite[Kapitel 8.2]{gaensslerstute1977Wahrscheinlichkeitstheorie}.
+\begin{satz}[Konvergenz-Kriterium]\label{satz: 3.9}
+	\begin{equation*}
+		X_n \ntoinf X \quad \P\text{-fast sicher}
+		\equivalent
+		\forall\epsilon > 0: \lim_{n \to \infty} \P\brackets{\sup_{m\ge n} d(X_m,X) > \epsilon} = 0
+	\end{equation*}
+\end{satz}
+\begin{proof}
+	Man ersetze im Beweis für den Fall reeller Zufallsvariablen $\abs{X_n-X}$ durch $d(X_n,X)$.
+	Und beachte, dass alle Schlussfolgerungen bestehen bleiben. Hier ausführlich:
+	\begin{align*}
+		X_n \overset{n\to \infty}{\longrightarrow} X~\P \text{-fast sicher}
+		&\equivalent 1 = \P\brackets{\bigcup_{0 < \epsilon} \bigcap_{m  \in  \N} \bigcup_{n \ge m} d(X_n, X) < \epsilon} \\
+		&\equivalent 0 = \P\brackets{\bigcap_{0 < \epsilon} \bigcup_{m  \in  \N} \bigcap_{n \ge m} d(X_n, X) \ge \epsilon} \\
+		&\equivalent 0 = \P\brackets{\bigcup_{m  \in  \N} \bigcap_{n \ge m} d(X_n, X) \ge \epsilon} \qquad \forall \epsilon > 0
+	\end{align*}
+	Da für $m \to  \infty$ die Mengen $\menge{\bigcap_{n \ge m} d(X_n, X) \ge \epsilon}$ kleiner werden,
+	ist dies äquivalent zu
+	\begin{align*}
+		\forall \epsilon > 0 \enskip \forall \delta > 0 \enskip \exists\, m  \in \N: \quad \P\brackets{\bigcap_{n \ge m} d(X_n, X) \ge \epsilon} &< \delta \\
+		\equivalent \forall \epsilon > 0: \quad \lim_{m \to  \infty} \P\brackets{\bigcap_{n \ge m} d(X_n, X) \ge \epsilon} &= 0 \\
+		\equivalent \forall \epsilon > 0: \quad \lim_{m \to  \infty} \P\brackets{\sup_{n \ge m} d(X_n, X) \ge \epsilon} &= 0
+	\end{align*}
+\end{proof}
+
+Ein sehr nützliches Kriterium ist Folgendes:
+\begin{satz}\label{satz: 3.10}
+	\begin{align*}
+		\forall \epsilon > 0: \quad 
+		\sum_{n \in \N_{\ge1}}\P\brackets{d(X_n,X)>\epsilon} < \infty
+		\quad \implies \quad  X_n \ntoinf X \quad \P\text{-fast sicher}
+	\end{align*}
+\end{satz}
+\begin{*bemerkung}
+	Die $\P(d(X_n, X) > \epsilon)$ werden in der Statistik \begriff{Fehlerwahrscheinlichkeit} oder \begriff{tail probability} genannt.
+	Um Fehlerwahrscheinlichkeiten abzuschätzen, also die Voraussetzung für diesen Satz für einen speziellen Fall zu zeigen, nutzt man häufig sogenannte Maximalungleichungen wie die Markov-Ungleichung und die Tschebychew-Ungleichung.
+\end{*bemerkung}
+
+\begin{proof}
+	Setze $A_n(\epsilon) \defeq \menge{d(X_n,X)>\epsilon} \in \A$ wegen \cref{satz: 3.5}.
+	Dann folgt aus dem \textit{ersten Borel-Cantelli-Lemma} $\displaystyle \P\brackets{\limsup_{n\to\infty} A_n(\epsilon)} = 0$ für alle $\epsilon > 0$. Mit
+	\begin{align*}
+		\liminf_{n \to \infty}\brackets{A_n(\epsilon)^\complement}
+		\overset{\text{Def}}{=}
+		\bigcup_{m \in \N}\bigcap_{n \ge  m} \brackets{A_n(\epsilon)}^\complement
+		&= \brackets{\bigcap_{m \in \N} \bigcup_{n \ge m} \menge{ d(X_n,X) > \epsilon}}^\complement \\
+		\overset{\text{Def}}&{=} \brackets{\limsup_{n \to \infty} A_n(\epsilon)}^\complement
+	\end{align*}
+	folgt dann
+	\begin{equation*}
+		1 = \P\brackets{\brackets{\limsup_{n\to\infty} A_n(\epsilon)}^\complement}
+		= \P\brackets{\liminf_{n\to\infty} \brackets{A_n(\epsilon)^\complement}}
+		\qquad \forall \epsilon > 0
+	\end{equation*}
+	Da abzählbare Durchschnitte von Eins-Mengen (also Mengen mit $\P$-Maß $1$) wieder Eins-Mengen sind, folgt schließlich:
+	\begin{equation*}
+		\P\brackets{\underbrace{
+			\bigcap_{0 < \epsilon \in \Q}\bigcup_{m \in \N}\bigcap_{n\ge m}\menge{d(X_n,X)\le\epsilon}
+		}_{\menge{ X_n\to X} = \menge{ d(X_n,X) \to 0}}}=1
+	\end{equation*}
+\end{proof}
+
+Weitere Eigenschaften der fast sicheren Konvergenz von Zufallsvariablen in metrischen Räumen finden sich z.\,B.\ in \cite[Kapitel 8.2]{gaensslerstute1977Wahrscheinlichkeitstheorie}.
 %
